[package]
name = "cag"
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "Context aware pager"
repository = "https://github.com/iisulop/cag"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["pager"]
exclude = [
  "**/*.orig",
  "*.orig",
  "tests/",
  "img/",
]

[dependencies]
aho-corasick = "1.1.3"
crossterm = "0.28.1"
itertools = "0.14.0"
ratatui = "0.29.0"
regex = "1.11.1"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tui-input = "0.11.1"

[[bin]]
name = "cag"
path = "src/main.rs"

[lib]

